--- a/about.html
+++ b/about.html
@@ -27,6 +27,10 @@
            <img src="estudios-contables2.jpg" alt="Software para Estudios Contables" />
         </div>
     </div>
+    <div class="greeting">
+      <p>Este texto es muy relevante!</p>
+
+    </div>
     
     
     <script src="style.js"></script>
